--- a/SortingAlgorithmAnalysis/App.xaml
+++ b/SortingAlgorithmAnalysis/App.xaml
@@ -1,8 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
-<Application xmlns="http://xamarin.com/schemas/2014/forms"
-             xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             x:Class="SortingAlgorithmAnalysis.App">
-    <Application.Resources>
+<unity:PrismApplication  xmlns:unity="clr-namespace:Prism.Unity;assembly=Prism.Unity.Forms"
+                         xmlns="http://xamarin.com/schemas/2014/forms"
+                         xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
+                         x:Class="SortingAlgorithmAnalysis.App">
 
-    </Application.Resources>
-</Application>
+</unity:PrismApplication>
